Adapting to C-NLTX.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Convergent_Analytics_new</name>
+	<name>C-NLTX-Open-Source</name>
 	<comment></comment>
 	<projects>
 	</projects>
